--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
 	</script>
 </head>
 
-<main class="container">
+<main id="normalview" class="container" style="margin: 0; background-image: url('bg.jpg');color: #ffffff; display: block;">
 	<div class="content">
 		<div class="marquee">
 			<h1>WELCOME TO JAZZTRONAUTS!!!!!!!!!!!!!!!!!</h1>
@@ -34,11 +34,42 @@
 			/>
 		</svg>&nbsp;@JazzSourceMod
 	</div>
+	<div class="footer">
+		&copy; singer please don't steal
+	</div>
 </main>
+
+<main id="spookyview" class="container" style="margin: 0; background-color: #0f0f0f;color: #ffffff; display: none;"">
+	<div class="content">
+		<img class="spookyimg" src="welcome2spookyville.png"></img>
+
+		<br/>
+		<h1>
+			<span id="remain">1</span>/<span id="total">1</span> files left.
+		</h1>
+	</div>
+	<br>
+	<div class="social">
+		<svg xmlns="http://www.w3.org/2000/svg" aria-label="Twitter" role="img" viewBox="90 118 350 290" width="32" height="32">
+			<path fill="#1da1f3" d="M437 152a72 72 0 0 1-40 12 72 72 0 0 0 32-40 72 72 0 0 1-45 17 72 72 0 0 0-122 65 200 200 0 0 1-145-74 72 72 0 0 0 22 94 72 72 0 0 1-32-7 72 72 0 0 0 56 69 72 72 0 0 1-32 1 72 72 0 0 0 67 50 200 200 0 0 1-105 29 200 200 0 0 0 309-179 200 200 0 0 0 35-37"
+			/>
+		</svg>&nbsp;@JazzSourceMod
+	</div>
+</main>
+
+
 <!-- Don't forget you tell your friends!!! -->
 
 <script>
 	window.GameDetails = function (servername, serverurl, mapname, maxplayers, steamid, gamemode) {
+		if (mapname == "jazz_apartments") {
+			window.spookyview.style.display = "block";
+			window.normalview.style.display = "none";
+		}
+		else {
+			window.spookyview.style.display = "none";
+			window.normalview.style.display = "block";
+		}
 		window.mapname.innerHTML = mapname
 	}
 
@@ -50,7 +81,3 @@
 		window.remain.innerHTML = needed
 	}
 </script>
-
-<footer>
-	&copy; singer please don't steal
-</footer>
